--- a/2.2-databases-2/orm_migrations/requirements.txt
+++ b/2.2-databases-2/orm_migrations/requirements.txt
@@ -1,2 +1,6 @@
-django
-psycopg2-binary
+asgiref==3.6.0
+backports.zoneinfo==0.2.1
+Django==4.1.5
+django_debug_toolbar==3.8.1
+psycopg2-binary==2.9.5
+sqlparse==0.4.3
