--- a/3.2-crud/stocks_products/requirements.txt
+++ b/3.2-crud/stocks_products/requirements.txt
@@ -1,3 +1,8 @@
-django
-djangorestframework
-psycopg2-binary
+asgiref==3.6.0
+backports.zoneinfo==0.2.1
+Django==4.1.5
+django-filter==22.1
+djangorestframework==3.14.0
+psycopg2-binary==2.9.5
+pytz==2022.7
+sqlparse==0.4.3
